# xInsp2-plugin-primitive-fitting

./: .gitignore  CMakeLists.txt  README.md  plugin.json  primitive_fitting.cpp
lab/: ALGORITHM.md  CMakeLists.txt  RESULTS.md  SURVEY.md  algo_caliper_cnn.cpp  algo_caliper_cnn_ort.cpp  algo_caliper_dp.cpp  algo_caliper_dp_poly.cpp  algo_caliper_ransac.cpp  algo_caliper_ransac_variants.cpp  algo_constrained_grid.cpp  algo_constrained_knot_dp.cpp  algo_constrained_ransac.cpp  algo_dijkstra.cpp  algo_dp.cpp  algo_naive.cpp  algo_spline_knot_dp.cpp  algo_subregion_dp_strips.cpp  algo_subregion_tv_band.cpp  algo_subregion_tv_peaks.cpp  algo_subregion_tv_strips.cpp  algo_tensor_voting.cpp  common.hpp  constrained_poly_common.hpp  dump_caliper_dataset.cpp  eval.cpp  main.cpp  scene.cpp
lab/cnn/: README.md  caliper_edge_v4.pt.metrics.csv  caliper_edge_v5.pt.metrics.csv  dataset.py  export_onnx.py  model.py  plot_metrics.py  train.py
tests/: test_native.cpp  test_ui.cjs
ui/: index.html
